Fix code typer overflow style

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,8 @@ body {
 
 body {
     background-color: vars.$hacker-black;
+
+    overflow: hidden;
 }
 
 #moduleLauncher {
